--- a/src/blpwtk2/private/blpwtk2.rc
+++ b/src/blpwtk2/private/blpwtk2.rc
@@ -70,12 +70,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Bloomberg LP"
             VALUE "FileDescription", "blpwtk2 Dynamic Link Library"
-            VALUE "FileVersion", BLPWTK2_VERSION
+            VALUE "FileVersion", BLPWTK2_RC_VERSION
             VALUE "InternalName", "blpwtk2"
             VALUE "LegalCopyright", "Copyright (C) 2015"
             VALUE "OriginalFilename", BLPWTK2_DLL_NAME
             VALUE "ProductName", "blpwtk2 Dynamic Link Library"
-            VALUE "ProductVersion", BLPWTK2_VERSION
+            VALUE "ProductVersion", BLPWTK2_RC_VERSION
         END
     END
     BLOCK "VarFileInfo"
@@ -102,12 +102,12 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "FileDescription", "blpwtk2 Dynamic Link Library"
-            VALUE "FileVersion", BLPWTK2_VERSION
+            VALUE "FileVersion", BLPWTK2_RC_VERSION
             VALUE "InternalName", "blpwtk2"
             VALUE "LegalCopyright", "Copyright (C) 2015"
             VALUE "OriginalFilename", BLPWTK2_DLL_NAME
             VALUE "ProductName", "blpwtk2 Dynamic Link Library"
-            VALUE "ProductVersion", BLPWTK2_VERSION
+            VALUE "ProductVersion", BLPWTK2_RC_VERSION
         END
     END
     BLOCK "VarFileInfo"
