--- a/src/pdf/blppdfium.rc
+++ b/src/pdf/blppdfium.rc
@@ -70,12 +70,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Bloomberg LP"
             VALUE "FileDescription", "blppdfium Dynamic Link Library"
-            VALUE "FileVersion", BLPWTK2_VERSION
+            VALUE "FileVersion", BLPWTK2_RC_VERSION
             VALUE "InternalName", "blppdfium"
             VALUE "LegalCopyright", "Copyright (C) 2015"
             VALUE "OriginalFilename", BLPPDFIUM_DLL_NAME
             VALUE "ProductName", "blppdfium Dynamic Link Library"
-            VALUE "ProductVersion", BLPWTK2_VERSION
+            VALUE "ProductVersion", BLPWTK2_RC_VERSION
         END
     END
     BLOCK "VarFileInfo"
@@ -102,12 +102,12 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "FileDescription", "blppdfium Dynamic Link Library"
-            VALUE "FileVersion", BLPWTK2_VERSION
+            VALUE "FileVersion", BLPWTK2_RC_VERSION
             VALUE "InternalName", "blppdfium"
             VALUE "LegalCopyright", "Copyright (C) 2015"
             VALUE "OriginalFilename", BLPPDFIUM_DLL_NAME
             VALUE "ProductName", "blppdfium Dynamic Link Library"
-            VALUE "ProductVersion", BLPWTK2_VERSION
+            VALUE "ProductVersion", BLPWTK2_RC_VERSION
         END
     END
     BLOCK "VarFileInfo"
