Migrate build process from GYP to GN

--- a/src/chrome/installer/mini_installer/BUILD.gn
+++ b/src/chrome/installer/mini_installer/BUILD.gn
@@ -146,16 +146,27 @@ action("archive") {
   }
 
   if (icu_use_data_file) {
-    inputs += [ "$root_out_dir/icudtl.dat" ]
+    if (bb_version == "") {
+      inputs += [ "$root_out_dir/icudtl.dat" ]
+    } else {
+      inputs += [ "$root_out_dir/icudtl.$bb_version.dat" ]
+    }
   } else {
     inputs += [ "$root_out_dir/icudt.dll" ]
   }
 
   if (v8_use_external_startup_data) {
-    inputs += [
-      "$root_out_dir/natives_blob.bin",
-      "$root_out_dir/snapshot_blob.bin",
-    ]
+    if (bb_version == "") {
+      inputs += [
+        "$root_out_dir/natives_blob.bin",
+        "$root_out_dir/snapshot_blob.bin",
+      ]
+    } else {
+      inputs += [
+        "$root_out_dir/natives_blob.$bb_version.bin",
+        "$root_out_dir/snapshot_blob.$bb_version.bin",
+      ]
+    }
     deps += [ "//v8" ]
   }
 
