--- a/src/components/mus/BUILD.gn
+++ b/src/components/mus/BUILD.gn
@@ -7,6 +7,7 @@ import("//testing/test.gni")
 import("//mojo/public/mojo_application.gni")
 import("//mojo/public/mojo_application_manifest.gni")
 import("//tools/grit/repack.gni")
+import("//blpwtk2/blpwtk2.gni") 
 
 if (is_android) {
   import("//build/config/android/config.gni")
@@ -58,10 +59,17 @@ if (is_win) {
       "//third_party/angle:libGLESv2",
     ]
 
-    sources = [
-      "$root_shlib_dir/libEGL.dll",
-      "$root_shlib_dir/libGLESv2.dll",
-    ]
+    if (bb_version != "") {
+      sources = [
+        "$root_shlib_dir/blpcr_egl.$bb_version.dll",
+        "$root_shlib_dir/blpcr_glesv2.$bb_version.dll",
+      ]
+    } else {
+      sources = [
+        "$root_shlib_dir/blpcr_egl.dll",
+        "$root_shlib_dir/blpcr_glesv2.dll",
+      ]
+    }
 
     outputs = [
       "$root_out_dir/mus/{{source_file_part}}",
