--- a/src/content/app/BUILD.gn
+++ b/src/content/app/BUILD.gn
@@ -34,6 +34,9 @@ content_app_deps = [
   "//ui/base",
   "//ui/gfx",
   "//ui/gfx/geometry",
+  # blpwtk2: Added this so that we can initialize V8's ICU in
+  #          content_main_runner.
+  "//v8",
 ]
 
 if (is_win) {
