--- a/src/content/browser/BUILD.gn
+++ b/src/content/browser/BUILD.gn
@@ -24,6 +24,7 @@ source_set("browser") {
   deps = [
     "//base",
     "//base:base_static",
+    "//components/filesystem:lib",
     "//components/mime_util",
     "//components/url_formatter",
     "//content:resources",
@@ -37,7 +38,8 @@ source_set("browser") {
     "//crypto",
     "//device/battery",
     "//device/vibration",
-    "//google_apis",
+    # blpwtk2: Remove dependencies on Google API
+#    "//google_apis",
     "//mojo/common",
     "//mojo/public/cpp/bindings",
     "//mojo/shell",
@@ -418,26 +420,28 @@ source_set("browser") {
 
   if (use_aura) {
     deps += [
-      "//components/bitmap_uploader",
-      "//components/mus/public/cpp",
-      "//components/mus/public/interfaces",
       "//ui/aura",
       "//ui/aura_extra",
       "//ui/strings",
-      "//ui/views/mus:for_component",
       "//ui/wm",
+      # blpwtk2: trim fat
+#      "//components/bitmap_uploader",
+#      "//components/mus/public/cpp",
+#      "//components/mus/public/interfaces",
+#      "//ui/views/mus:for_component",
     ]
-    sources += [
-      "compositor/software_output_device_mus.cc",
-      "compositor/software_output_device_mus.h",
-      "renderer_host/render_widget_host_view_mus.cc",
-      "renderer_host/render_widget_host_view_mus.h",
-      "web_contents/web_contents_view_mus.cc",
-      "web_contents/web_contents_view_mus.h",
-    ]
-    if (toolkit_views) {
-      defines += [ "MOJO_RUNNER_CLIENT" ]
-    }
+      # blpwtk2: trim fat
+#    sources += [
+#      "compositor/software_output_device_mus.cc",
+#      "compositor/software_output_device_mus.h",
+#      "renderer_host/render_widget_host_view_mus.cc",
+#      "renderer_host/render_widget_host_view_mus.h",
+#      "web_contents/web_contents_view_mus.cc",
+#      "web_contents/web_contents_view_mus.h",
+#    ]
+#    if (toolkit_views) {
+#      defines += [ "MOJO_RUNNER_CLIENT" ]
+#    }
   } else {  # Not aura.
     sources -= [
       "media/capture/cursor_renderer_aura.cc",
