--- a/src/content/shell/BUILD.gn
+++ b/src/content/shell/BUILD.gn
@@ -47,46 +47,47 @@ static_library("content_shell_lib") {
     "app/shell_main_delegate.h",
     "app/shell_main_delegate_mac.h",
     "app/shell_main_delegate_mac.mm",
-    "browser/layout_test/blink_test_controller.cc",
-    "browser/layout_test/blink_test_controller.h",
-    "browser/layout_test/layout_test_android.cc",
-    "browser/layout_test/layout_test_android.h",
-    "browser/layout_test/layout_test_bluetooth_adapter_provider.cc",
-    "browser/layout_test/layout_test_bluetooth_adapter_provider.h",
-    "browser/layout_test/layout_test_bluetooth_chooser_factory.cc",
-    "browser/layout_test/layout_test_bluetooth_chooser_factory.h",
-    "browser/layout_test/layout_test_browser_context.cc",
-    "browser/layout_test/layout_test_browser_context.h",
-    "browser/layout_test/layout_test_browser_main.cc",
-    "browser/layout_test/layout_test_browser_main.h",
-    "browser/layout_test/layout_test_browser_main_parts.cc",
-    "browser/layout_test/layout_test_browser_main_parts.h",
-    "browser/layout_test/layout_test_content_browser_client.cc",
-    "browser/layout_test/layout_test_content_browser_client.h",
-    "browser/layout_test/layout_test_devtools_frontend.cc",
-    "browser/layout_test/layout_test_devtools_frontend.h",
-    "browser/layout_test/layout_test_download_manager_delegate.cc",
-    "browser/layout_test/layout_test_download_manager_delegate.h",
-    "browser/layout_test/layout_test_javascript_dialog_manager.cc",
-    "browser/layout_test/layout_test_javascript_dialog_manager.h",
-    "browser/layout_test/layout_test_message_filter.cc",
-    "browser/layout_test/layout_test_message_filter.h",
-    "browser/layout_test/layout_test_navigator_connect_service_factory.cc",
-    "browser/layout_test/layout_test_navigator_connect_service_factory.h",
-    "browser/layout_test/layout_test_notification_manager.cc",
-    "browser/layout_test/layout_test_notification_manager.h",
-    "browser/layout_test/layout_test_permission_manager.cc",
-    "browser/layout_test/layout_test_permission_manager.h",
-    "browser/layout_test/layout_test_push_messaging_service.cc",
-    "browser/layout_test/layout_test_push_messaging_service.h",
-    "browser/layout_test/layout_test_resource_dispatcher_host_delegate.cc",
-    "browser/layout_test/layout_test_resource_dispatcher_host_delegate.h",
-    "browser/layout_test/layout_test_url_request_context_getter.cc",
-    "browser/layout_test/layout_test_url_request_context_getter.h",
+    # blpwtk2: Remove test-only code
+#    "browser/layout_test/blink_test_controller.cc",
+#    "browser/layout_test/blink_test_controller.h",
+#    "browser/layout_test/layout_test_android.cc",
+#    "browser/layout_test/layout_test_android.h",
+#    "browser/layout_test/layout_test_bluetooth_adapter_provider.cc",
+#    "browser/layout_test/layout_test_bluetooth_adapter_provider.h",
+#    "browser/layout_test/layout_test_bluetooth_chooser_factory.cc",
+#    "browser/layout_test/layout_test_bluetooth_chooser_factory.h",
+#    "browser/layout_test/layout_test_browser_context.cc",
+#    "browser/layout_test/layout_test_browser_context.h",
+#    "browser/layout_test/layout_test_browser_main.cc",
+#    "browser/layout_test/layout_test_browser_main.h",
+#    "browser/layout_test/layout_test_browser_main_parts.cc",
+#    "browser/layout_test/layout_test_browser_main_parts.h",
+#    "browser/layout_test/layout_test_content_browser_client.cc",
+#    "browser/layout_test/layout_test_content_browser_client.h",
+#    "browser/layout_test/layout_test_devtools_frontend.cc",
+#    "browser/layout_test/layout_test_devtools_frontend.h",
+#    "browser/layout_test/layout_test_download_manager_delegate.cc",
+#    "browser/layout_test/layout_test_download_manager_delegate.h",
+#    "browser/layout_test/layout_test_javascript_dialog_manager.cc",
+#    "browser/layout_test/layout_test_javascript_dialog_manager.h",
+#    "browser/layout_test/layout_test_message_filter.cc",
+#    "browser/layout_test/layout_test_message_filter.h",
+#    "browser/layout_test/layout_test_navigator_connect_service_factory.cc",
+#    "browser/layout_test/layout_test_navigator_connect_service_factory.h",
+#    "browser/layout_test/layout_test_notification_manager.cc",
+#    "browser/layout_test/layout_test_notification_manager.h",
+#    "browser/layout_test/layout_test_permission_manager.cc",
+#    "browser/layout_test/layout_test_permission_manager.h",
+#    "browser/layout_test/layout_test_push_messaging_service.cc",
+#    "browser/layout_test/layout_test_push_messaging_service.h",
+#    "browser/layout_test/layout_test_resource_dispatcher_host_delegate.cc",
+#    "browser/layout_test/layout_test_resource_dispatcher_host_delegate.h",
+#    "browser/layout_test/layout_test_url_request_context_getter.cc",
+#    "browser/layout_test/layout_test_url_request_context_getter.h",
     "browser/layout_test/notify_done_forwarder.cc",
     "browser/layout_test/notify_done_forwarder.h",
-    "browser/layout_test/test_info_extractor.cc",
-    "browser/layout_test/test_info_extractor.h",
+#    "browser/layout_test/test_info_extractor.cc",
+#    "browser/layout_test/test_info_extractor.h",
     "browser/shell.cc",
     "browser/shell.h",
     "browser/shell_access_token_store.cc",
@@ -143,8 +144,9 @@ static_library("content_shell_lib") {
     "browser/shell_web_contents_view_delegate_creator.h",
     "browser/shell_web_contents_view_delegate_mac.mm",
     "browser/shell_web_contents_view_delegate_win.cc",
-    "common/layout_test/layout_test_messages.cc",
-    "common/layout_test/layout_test_messages.h",
+    # blpwtk2: Remove test-only code
+#    "common/layout_test/layout_test_messages.cc",
+#    "common/layout_test/layout_test_messages.h",
     "common/leak_detection_result.h",
     "common/shell_content_client.cc",
     "common/shell_content_client.h",
@@ -152,24 +154,26 @@ static_library("content_shell_lib") {
     "common/shell_messages.h",
     "common/shell_switches.cc",
     "common/shell_switches.h",
-    "common/shell_test_configuration.cc",
-    "common/shell_test_configuration.h",
-    "renderer/layout_test/blink_test_helpers.cc",
-    "renderer/layout_test/blink_test_helpers.h",
-    "renderer/layout_test/blink_test_runner.cc",
-    "renderer/layout_test/blink_test_runner.h",
-    "renderer/layout_test/layout_test_content_renderer_client.cc",
-    "renderer/layout_test/layout_test_content_renderer_client.h",
-    "renderer/layout_test/layout_test_render_frame_observer.cc",
-    "renderer/layout_test/layout_test_render_frame_observer.h",
-    "renderer/layout_test/layout_test_render_process_observer.cc",
-    "renderer/layout_test/layout_test_render_process_observer.h",
-    "renderer/layout_test/leak_detector.cc",
-    "renderer/layout_test/leak_detector.h",
-    "renderer/layout_test/test_media_stream_renderer_factory.cc",
-    "renderer/layout_test/test_media_stream_renderer_factory.h",
-    "renderer/layout_test/test_video_frame_provider.cc",
-    "renderer/layout_test/test_video_frame_provider.h",
+    # blpwtk2: Remove test-only code
+#    "common/shell_test_configuration.cc",
+#    "common/shell_test_configuration.h",
+#    "renderer/layout_test/blink_test_helpers.cc",
+#    "renderer/layout_test/blink_test_helpers.h",
+#    "renderer/layout_test/blink_test_runner.cc",
+#    "renderer/layout_test/blink_test_runner.h",
+#    "renderer/layout_test/layout_test_content_renderer_client.cc",
+#    "renderer/layout_test/layout_test_content_renderer_client.h",
+#    "renderer/layout_test/layout_test_render_frame_observer.cc",
+#    "renderer/layout_test/layout_test_render_frame_observer.h",
+#    "renderer/layout_test/layout_test_render_process_observer.cc",
+#    "renderer/layout_test/layout_test_render_process_observer.h",
+#    "renderer/layout_test/leak_detector.cc",
+#    "renderer/layout_test/leak_detector.h",
+#    "renderer/layout_test/test_media_stream_renderer_factory.cc",
+#    "renderer/layout_test/test_media_stream_renderer_factory.h",
+#    "renderer/layout_test/test_video_frame_provider.cc",
+#    "renderer/layout_test/test_video_frame_provider.h",
+
     "renderer/shell_content_renderer_client.cc",
     "renderer/shell_content_renderer_client.h",
     "renderer/shell_render_view_observer.cc",
@@ -205,20 +209,25 @@ static_library("content_shell_lib") {
     "//base:base_static",
     "//base/third_party/dynamic_annotations",
     "//cc",
+    # blpwtk2, needed
+    "//chrome/chrome_blpwtk2",
     "//components/crash/content/app:app_breakpad_mac_win_to_be_deleted",
     "//components/devtools_discovery",
     "//components/devtools_http_handler",
-    "//components/plugins/renderer",
-    "//components/test_runner:test_runner",
-    "//components/url_formatter",
     "//components/web_cache/renderer",
+    "//components/url_formatter",
+    # blpwtk2, not needed
+#    "//components/plugins/renderer",
+#    "//components/test_runner:test_runner",
     "//content:resources",
+    "//content:sandbox_helper_win",
     "//content/app/resources",
     "//content/app/strings",
     "//content/gpu",
-    "//content/test:layouttest_support",
+    # blpwtk2, not needed
+#    "//content/test:layouttest_support",
+#    "//device/bluetooth:mocks",
     "//device/bluetooth",
-    "//device/bluetooth:mocks",
     "//gin",
     "//gpu",
     "//ipc",
@@ -227,15 +236,21 @@ static_library("content_shell_lib") {
     "//net:net_resources",
     "//skia",
     "//storage/browser",
-    "//testing/gmock",
-    "//testing/gtest",
+    # blpwtk2, not needed
+#    "//testing/gmock",
+#    "//testing/gtest",
     "//third_party/WebKit/public:blink",
-    "//third_party/WebKit/public:image_resources",
-    "//third_party/WebKit/public:resources",
-    "//third_party/WebKit/public:test_support",
-    "//third_party/icu",
+    # blpwtk2, not needed
+#    "//third_party/WebKit/public:image_resources",
+#    "//third_party/WebKit/public:resources",
+#    "//third_party/WebKit/public:test_support",
+#    "//third_party/icu",
     "//ui/base",
     "//ui/base/ime",
+
+    # blpwtk2: Add this dependency for LayerAnimationObserver
+    "//ui/compositor",
+
     "//ui/events:events_base",
     "//ui/gfx",
     "//ui/gfx/geometry",
@@ -290,10 +305,11 @@ static_library("content_shell_lib") {
   if (use_aura) {
     deps += [
       "//ui/aura",
-      "//ui/aura:test_support",
       "//ui/events",
       "//ui/strings",
       "//ui/wm",
+      # blpwtk2, not needed
+#      "//ui/aura:test_support",
     ]
 
     if (toolkit_views) {
@@ -301,8 +317,9 @@ static_library("content_shell_lib") {
       deps += [
         "//ui/resources",
         "//ui/views",
-        "//ui/views:test_support",
         "//ui/views/controls/webview",
+        # blpwtk2, not needed
+#        "//ui/views:test_support",
       ]
     } else {
       sources += [ "browser/shell_aura.cc" ]
@@ -442,6 +459,13 @@ if (!is_android && !is_mac) {
         # Set /SUBSYSTEM:WINDOWS unless a console build has been requested.
         configs -= [ "//build/config/win:console" ]
         configs += [ "//build/config/win:windowed" ]
+      }
+      if (bb_generate_map_files) {
+        configs += [ "//blpwtk2:blpwtk2_gen_map" ]
+      }
+      if (is_official_build) {
+        configs -= [ "//build/config/compiler:default_optimization" ]
+        configs += [ "//build/config/compiler:optimize_max" ]
       }
     }
 
