--- a/src/gin/BUILD.gn
+++ b/src/gin/BUILD.gn
@@ -4,6 +4,7 @@
 
 import("//build_overrides/v8.gni")
 import("//testing/test.gni")
+import("//blpwtk2/blpwtk2.gni")
 
 component("gin") {
   sources = [
@@ -68,10 +69,17 @@ component("gin") {
   ]
 
   if (v8_use_external_startup_data) {
-    data = [
-      "$root_out_dir/natives_blob.bin",
-      "$root_out_dir/snapshot_blob.bin",
-    ]
+    if (bb_version != "") {
+      data = [
+        "$root_out_dir/natives_blob.$bb_version.bin",
+        "$root_out_dir/snapshot_blob.$bb_version.bin",
+      ]
+    } else {
+      data = [
+        "$root_out_dir/natives_blob.bin",
+        "$root_out_dir/snapshot_blob.bin",
+      ]
+    }
   }
 
   defines = [ "GIN_IMPLEMENTATION" ]
@@ -79,6 +87,7 @@ component("gin") {
   public_deps = [
     "//base",
     "//v8",
+    "//blpwtk2:blpwtk2_generate_sources",
   ]
   deps = [
     "//base/third_party/dynamic_annotations",
@@ -91,14 +100,22 @@ component("gin") {
   }
 
   configs += [ "//v8:external_startup_data" ]
+  public_configs = [
+    "//blpwtk2:blpwtk2_public"
+  ]
 }
 
 if (v8_use_external_startup_data) {
   action("gin_v8_snapshot_fingerprint") {
     script = "//gin/fingerprint/fingerprint_v8_snapshot.py"
 
-    snapshot_file = "$root_out_dir/snapshot_blob.bin"
-    natives_file = "$root_out_dir/natives_blob.bin"
+    if (bb_version != "") {
+      snapshot_file = "$root_out_dir/snapshot_blob.$bb_version.bin"
+      natives_file = "$root_out_dir/natives_blob.$bb_version.bin"
+    } else {
+      snapshot_file = "$root_out_dir/snapshot_blob.bin"
+      natives_file = "$root_out_dir/natives_blob.bin"
+    }
     output_file = "$target_gen_dir/v8_snapshot_fingerprint.cc"
 
     args = [
