--- a/src/ipc/BUILD.gn
+++ b/src/ipc/BUILD.gn
@@ -243,7 +243,8 @@ source_set("test_support") {
   ]
   deps = [
     "//base",
-    "//base/test:test_support",
     "//testing/gtest",
+    # blpwtk2, not needed
+#    "//base/test:test_support",
   ]
 }
