--- a/src/base/BUILD.gn
+++ b/src/base/BUILD.gn
@@ -1419,6 +1419,7 @@ component("i18n") {
   configs += [ "//build/config/compiler:wexit_time_destructors" ]
   public_deps = [
     "//third_party/icu",
+    "//blpwtk2:blpwtk2_generate_sources",
   ]
   deps = [
     ":base",
@@ -1432,6 +1433,9 @@ component("i18n") {
 
   # TODO(jschuh): crbug.com/167187 fix size_t to int truncations.
   configs += [ "//build/config/compiler:no_size_t_to_int_warning" ]
+  public_configs = [
+    "//blpwtk2:blpwtk2_public"
+  ]
 }
 
 if (is_ios || is_android || is_win || (is_linux && !is_chromeos)) {
