--- a/src/content/BUILD.gn
+++ b/src/content/BUILD.gn
@@ -83,7 +83,7 @@ if (is_component_build) {
   }
 } else {
   group("content") {
-    public_deps = content_shared_components
+    public_deps = content_shared_components + [ "//content/public/app:both" ]
   }
 }
 
@@ -93,6 +93,8 @@ grit("resources") {
   outputs = [
     "grit/content_resources.h",
     "content_resources.pak",
+    # needed by blpwtk2
+    "content_resources.rc",
   ]
 }
 
