--- a/src/mojo/shell/public/cpp/tests/BUILD.gn
+++ b/src/mojo/shell/public/cpp/tests/BUILD.gn
@@ -13,6 +13,8 @@ test("mojo_public_application_unittests") {
     "//base",
     "//mojo/edk/test:run_all_unittests",
     "//mojo/shell/public/cpp",
-    "//testing/gtest",
+
+    # blpwtk2: Remove test-only code
+#    "//testing/gtest",
   ]
 }
