--- a/src/sandbox/win/BUILD.gn
+++ b/src/sandbox/win/BUILD.gn
@@ -167,6 +167,11 @@ static_library("sandbox") {
 
   configs += [ "//build/config:precompiled_headers" ]
 
+  defines = [
+    "SANDBOX_DLL",
+    "SANDBOX_EXPORTS"
+  ]
+
   deps = [
     "//base",
     "//base:base_static",
