--- a/src/ui/compositor/BUILD.gn
+++ b/src/ui/compositor/BUILD.gn
@@ -183,7 +183,8 @@ test("compositor_unittests") {
     "//base",
     "//base/test:test_support",
     "//cc",
-    "//cc:test_support",
+    #  blpwtk2: Remove test-only code
+#    "//cc:test_support",
     "//cc/surfaces",
     "//cc/surfaces:surface_id",
     "//skia",
